# ibridges-gui-plugin-example

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
ibridgesguicontrib/exampleplugin/: ExampleTab.py  __init__.py  example.py  example1.py  example2.py  tabExample.py  tabExample.ui  tabExample1.py  tabExample1.ui
ibridgesguicontrib/exampleplugin/ui_files/: tabExample.py
