[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exampleplugin"
description = "An example tab for the iBridges GUI."
authors = [
    {name = "Christine Staiger", email = "c.staiger@uu.nl"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU LGPL"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "PySide6>=6.8.1",
    "ibridgesgui>=1.4.0, <1.5"
]

[project.optional-dependencies]
test = ["ruff", "mypy"]

[project.entry-points."ibridges.gui_tab"]
uu1 = "ibridgesguicontrib.exampleplugin.example1:ExampleTab1"
uu2 = "ibridgesguicontrib.exampleplugin.example2:ExampleTab2"
[tool.setuptools]
packages = ["ibridgesguicontrib"]

[tool.setuptools_scm]
write_to = "ibridgesguicontrib/exampleplugin/_version.py"

[tool.ruff]
exclude = ["_version.py", "tab*.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
exclude = ["_version.py", "tab*.py"]
select = ["C", "D", "E", "F", "UP", "B", "SIM", "I", "N", "W"]
ignore = ["D203", "D213", "D206", "UP007"]
